# wonky

./: .gitignore  Cargo.toml  LICENSE  README.md  boopie.rs  config.toml  example.toml
.github/workflows/: ci.yml
src/: bloatie.rs  boopie.rs  main.rs  meter.rs  meter_theme.rs  settings.rs
src/settings/: indicator.rs  meter.rs  meter_theme.rs  mod.rs  separator.rs  seperator.rs
