[package]
name = "thingy"
version = "0.1.0"
authors = ["gorg <gorgmakesthings@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinybit = { git = "https://github.com/togglebyte/tinybit" }
chrono = "0.4"
days-in-month = "2.0.0"
psutil = "3.2.1"
rand = "0.8.3"
serde = { version = "1.0.104", features = ["derive"] }
config = "0.11.0"
