[package]
name = "wonky"
version = "0.1.0"
authors = ["gorg <gorgmakesthings@gmail.com>"]
edition = "2018"
description = "terminal monitoring application"
license-file = "LICENSE"
repository = "https://github.com/the-gorg/wonky"
keywords = ["monitoring"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4"
directories-next = "2.0.0"
rand = "0.8.3"
serde = { version = "1.0.104", features = ["derive"] }
tinybit = "0.1.1"
toml = "0.5.8"
